--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Valentine Invitation 💕</title>
 
 <style>
@@ -13,37 +14,46 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .card {
     background: rgba(255,255,255,0.6);
-    padding: 40px;
+    padding: 30px 20px;
     border-radius: 25px;
     text-align: center;
-    max-width: 420px;
+    max-width: 90%;
+    width: 400px;
     box-shadow: 0 15px 30px rgba(0,0,0,0.15);
     position: relative;
 }
 
 h1 {
     color: #ff4d6d;
-    font-size: 2.5em;
+    font-size: 2em;
+    margin: 0.3em 0;
 }
 
 p {
     color: #6a0572;
-    font-size: 1.1em;
+    font-size: 1em;
+    margin-bottom: 1.5em;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    position: relative;
 }
 
 button {
-    padding: 12px 28px;
+    padding: 12px 20px;
     border: none;
     border-radius: 30px;
     font-size: 1em;
     cursor: pointer;
-    margin: 10px;
-    transition: 0.3s;
+    transition: transform 0.3s ease;
 }
 
 .yes {
@@ -55,36 +65,28 @@ button {
     background: white;
     color: #ff4d6d;
     position: absolute;
-}
-
-button:hover {
-    transform: scale(1.1);
+    left: 50%;
+    transform: translateX(80px);
+    transition: all 0.5s ease;
 }
 
 #message {
     margin-top: 20px;
-    font-size: 1.3em;
+    font-size: 1.1em;
     color: #ff4d6d;
 }
 
-/* Floating Hearts */
+/* Floating hearts */
 .heart {
     position: absolute;
     bottom: -20px;
-    font-size: 20px;
     animation: floatUp linear infinite;
     opacity: 0.8;
 }
 
 @keyframes floatUp {
-    from {
-        transform: translateY(0);
-        opacity: 1;
-    }
-    to {
-        transform: translateY(-110vh);
-        opacity: 0;
-    }
+    from { transform: translateY(0); opacity: 1; }
+    to { transform: translateY(-110vh); opacity: 0; }
 }
 
 /* Confetti */
@@ -92,19 +94,20 @@ button:hover {
     position: absolute;
     width: 8px;
     height: 8px;
-    background: pink;
     animation: fall 3s linear forwards;
 }
 
 @keyframes fall {
-    from {
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-    }
-    to {
-        transform: translateY(100vh) rotate(720deg);
-        opacity: 0;
-    }
+    from { transform: translateY(0) rotate(0deg); }
+    to { transform: translateY(100vh) rotate(720deg); }
+}
+
+/* Responsive adjustments for mobile */
+@media (max-width: 500px) {
+    h1 { font-size: 1.6em; }
+    p { font-size: 0.95em; }
+    button { padding: 10px 16px; font-size: 0.95em; }
+    .no { transform: translateX(60px); }
 }
 </style>
 </head>
@@ -112,11 +115,13 @@ button:hover {
 <body>
 
 <div class="card">
-    <h1>💖 Hi, BAB! 💖</h1>
+    <h1>💖 Hi, [Name]! 💖</h1>
     <p>Will you be my Valentine this February 14? 🌸</p>
 
-    <button class="yes" onclick="yesClick()">YES 💕</button>
-    <button class="no" id="noBtn">NO 🙈</button>
+    <div class="buttons">
+        <button class="yes" onclick="yesClick()">YES 💕</button>
+        <button class="no" id="noBtn">NO 🙈</button>
+    </div>
 
     <div id="message"></div>
 </div>
@@ -128,46 +133,46 @@ button:hover {
 <script>
 const noBtn = document.getElementById("noBtn");
 
-noBtn.addEventListener("mouseover", moveButton);
-noBtn.addEventListener("click", moveButton);
+// Teleport NO button smoothly
+noBtn.addEventListener("mouseover", teleportNo);
+noBtn.addEventListener("click", teleportNo);
 
-function moveButton() {
+function teleportNo() {
     const card = document.querySelector(".card");
+    const cardRect = card.getBoundingClientRect();
 
-    const maxX = card.clientWidth - noBtn.clientWidth;
-    const maxY = card.clientHeight - noBtn.clientHeight;
+    const maxX = cardRect.width - noBtn.offsetWidth;
+    const maxY = cardRect.height - noBtn.offsetHeight;
 
-    noBtn.style.left = Math.random() * maxX + "px";
-    noBtn.style.top = Math.random() * maxY + "px";
+    const randomX = Math.random() * maxX;
+    const randomY = Math.random() * maxY;
+
+    noBtn.style.left = randomX + "px";
+    noBtn.style.top = randomY + "px";
 }
 
-// YES click with confetti
+// YES click
 function yesClick() {
     document.getElementById("message").innerHTML =
         "Yay! 💗 You said YES! 💐🎉";
 
-    for (let i = 0; i < 150; i++) {
-        createConfetti();
-    }
+    for (let i = 0; i < 150; i++) createConfetti();
 }
 
-// Create confetti
+// Confetti generator
 function createConfetti() {
-    const confetti = document.createElement("div");
-    confetti.classList.add("confetti");
-
-    confetti.style.left = Math.random() * 100 + "vw";
-    confetti.style.background = randomColor();
-    confetti.style.animationDuration = (2 + Math.random() * 2) + "s";
-
-    document.body.appendChild(confetti);
-
-    setTimeout(() => confetti.remove(), 4000);
+    const c = document.createElement("div");
+    c.classList.add("confetti");
+    c.style.left = Math.random() * 100 + "vw";
+    c.style.background = randomColor();
+    c.style.animationDuration = (2 + Math.random() * 2) + "s";
+    document.body.appendChild(c);
+    setTimeout(() => c.remove(), 4000);
 }
 
 // Random pastel confetti colors
 function randomColor() {
-    const colors = ["#ffb3c6", "#ffd6e0", "#e0bbff", "#cdb4db", "#ffc8dd"];
+    const colors = ["#ffb3c6","#ffd6e0","#e0bbff","#cdb4db","#ffc8dd"];
     return colors[Math.floor(Math.random() * colors.length)];
 }
 
@@ -176,13 +181,10 @@ function createHeart() {
     const heart = document.createElement("div");
     heart.classList.add("heart");
     heart.innerHTML = "💗";
-
     heart.style.left = Math.random() * 100 + "vw";
     heart.style.animationDuration = (3 + Math.random() * 4) + "s";
     heart.style.fontSize = (15 + Math.random() * 20) + "px";
-
     document.body.appendChild(heart);
-
     setTimeout(() => heart.remove(), 7000);
 }
 
