--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ button {
 <body>
 
 <div class="card">
-    <h1>💖 Hi, [Name]! 💖</h1>
+    <h1>💖 Hi, BAB! 💖</h1>
     <p>Will you be my Valentine this February 14? 🌸</p>
 
     <div class="buttons">
